--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     implementation 'com.github.skydoves:colorpickerview:2.2.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.0"
+    implementation 'com.applandeo:material-calendar-view:1.9.2'
+    implementation 'com.google.android.material:material:1.11.0'
+
 }
