--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.7.0"
     implementation 'com.applandeo:material-calendar-view:1.9.2'
     implementation 'com.google.android.material:material:1.11.0'
-
+    implementation "com.kizitonwose.calendar:view:2.2.0"
 }
