--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.firebase.firestore
     implementation libs.firebase.messaging
+    implementation libs.firebase.auth
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -45,4 +46,6 @@ dependencies {
     implementation 'com.applandeo:material-calendar-view:1.9.2'
     implementation 'com.google.android.material:material:1.11.0'
     implementation "com.kizitonwose.calendar:view:2.2.0"
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.zxing:core:3.5.2'
 }
